--- a/template/template.html
+++ b/template/template.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<h2>$date$</h2>
 <div id="content">$content$</div>
+<div id="footer">$previous$$next$</div>
 </body>
 </html>
