--- a/template/template.html
+++ b/template/template.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h2>$date$</h2>
-<div id="content">$content$</div>
-<div id="footer">$previous$$next$</div>
+<div id="wrapper">
+    <div id="index">$index$</div>
+    <div id="blog">
+        <h2>$date$</h2>
+        <div id="content">$content$</div>
+        <div id="footer">$previous$$next$</div>
+    </div>
+</div>
 </body>
 </html>
