--- a/template/template.html
+++ b/template/template.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="index">$index$</div>
-    <div id="blog">
-        <h2>$date$</h2>
-        <div id="content">$content$</div>
-        <div id="footer">$previous$$next$</div>
+    <div id="header"><h2>$date$</h2></div>
+    <div id="content">
+        <div id="index"><ul>$index$</ul></div>
+        <div id="blog">
+            <div id="post">$post$</div>
+            <div id="footer">$previous$$next$</div>
+        </div>
     </div>
 </div>
 </body>
