Link to current page is disabled

--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@ body {
 
 #index {
     padding: 8px;
+    white-space: nowrap;
+    font-style: italic;
+}
+
+#index ul {
+    list-style-type: none;
+    text-align: right;
+    margin: 0;
 }
 
 #blog {
