--- a/template/template.html
+++ b/template/template.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>$title$</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_16.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_32.png"/>
 </head>
 <body>
 <div id="wrapper">
