--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #d6e0ea;
+    background-color: #e8e3d2;
     font-family: sans-serif;
 }
 
@@ -35,7 +35,7 @@ body {
 }
 
 #post {
-    background-color: #e8e3d2;
+    background-color: #efefef;
     padding: 12px;
 }
 
