--- a/template/template.html
+++ b/template/template.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_16.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_32.png"/>
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="rss.xml">
 </head>
 <body>
 <div id="wrapper">
