--- a/template/template_rss_item.xml
+++ b/template/template_rss_item.xml
@@ -1,5 +1,5 @@
 <item>
     <title>$title</title>
     <link>$link$</link>
-    <description>$description</description>
+    <description>$description$</description>
 </item>
