--- a/template/template.html
+++ b/template/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$title$</title>
+    <title>Koi Farm 2 blog | $title$</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_16.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_32.png"/>
@@ -10,7 +10,6 @@
 </head>
 <body>
 <div id="wrapper">
-    <div id="header"><h2>$date$</h2></div>
     <div id="content">
         <div id="index"><ul>$index$</ul></div>
         <div id="blog">
