--- a/template/template.html
+++ b/template/template.html
@@ -14,7 +14,6 @@
         <div id="index">
             <ul>$index$</ul>
             <a href="rss.xml">
-                <?xml version="1.0" encoding="iso-8859-1"?>
                 <svg height="16px" width="16px" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24.912 24.912" xml:space="preserve">
                     <g>
                         <path d="M3.692,17.517C1.656,17.517,0,19.173,0,21.211C0,23.244,1.656,24.9,3.692,24.9s3.694-1.657,3.694-3.689,C7.387,19.173,5.729,17.517,3.692,17.517z"/>
@@ -22,6 +21,13 @@
                         <path d="M24.89,24.397C24.825,10.936,13.854,0.011,0.384,0.011C0.173,0.011,0,0.183,0,0.397v4.824c0,0.212,0.173,0.383,0.384,0.383,c10.429,0,18.913,8.486,18.913,18.914c0,0.209,0.172,0.383,0.382,0.383h4.825h0.02c0.21,0,0.388-0.173,0.388-0.383L24.89,24.397z"/>
                     </g>
                 </svg>
+            </a>
+            <a href="https://x.com/jobtalle" target="_blank">
+            <svg height="16px" width="16px" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24" xml:space="preserve">
+                <g>
+                    <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+                </g>
+            </svg>
             </a>
         </div>
         <div id="blog">
