--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
     --color-dark: #2f2f2f;
-    --color-link: #6298E0;
+    --color-link: #5488cc;
+    --color-hover: #4ba837;
 }
 
 a:link {
@@ -8,7 +9,11 @@ a:link {
 }
 
 a:visited {
-    color: gray;
+    color: var(--color-link);
+}
+
+a:hover {
+    color: var(--color-hover);
 }
 
 .icon {
@@ -18,7 +23,7 @@ a:visited {
 }
 
 .icon:hover {
-    fill: var(--color-link);
+    fill: var(--color-hover);
 }
 
 body {
