--- a/template/template.html
+++ b/template/template.html
@@ -13,7 +13,7 @@
     <div id="content">
         <div id="index">
             <ul>$index$</ul>
-            <a href="rss.xml">
+            <a href="rss.xml" title="RSS">
                 <svg height="16px" width="16px" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24.912 24.912" xml:space="preserve">
                     <g>
                         <path d="M3.692,17.517C1.656,17.517,0,19.173,0,21.211C0,23.244,1.656,24.9,3.692,24.9s3.694-1.657,3.694-3.689,C7.387,19.173,5.729,17.517,3.692,17.517z"/>
@@ -22,7 +22,7 @@
                     </g>
                 </svg>
             </a>
-            <a href="https://x.com/jobtalle" target="_blank">
+            <a href="https://x.com/jobtalle" target="_blank" title="X">
             <svg height="16px" width="16px" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24" xml:space="preserve">
                 <g>
                     <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
