--- a/template/template.html
+++ b/template/template.html
@@ -11,7 +11,11 @@
 <body>
 <div id="wrapper">
     <div id="content">
-        <div id="index">
+        <input type="checkbox" id="dropdown-menu" class="dropdown-checkbox">
+        <label for="dropdown-menu" class="dropdown-toggle">
+            <div id="menu-toggle"><span>Index</span></div>
+        </label>
+        <div id="index" class="dropdown-menu">
             <ul>$index$</ul>
             <a href="rss.xml" title="RSS">
                 <svg height="16px" width="16px" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24.912 24.912" xml:space="preserve">
