--- a/template/template.html
+++ b/template/template.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1">
     <title>Koi Farm 2 blog | $title$</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_16.png"/>
