--- a/template/template.html
+++ b/template/template.html
@@ -14,7 +14,7 @@
     <div id="content">
         <input type="checkbox" id="dropdown-menu" class="dropdown-checkbox">
         <label for="dropdown-menu" class="dropdown-toggle">
-            <div id="menu-toggle"><span>Index</span></div>
+            <div id="menu-toggle"><span></span></div>
         </label>
         <div id="index" class="dropdown-menu">
             <ul>$index$</ul>
