Created more room for titles in mobile mode

--- a/style.css
+++ b/style.css
@@ -159,6 +159,10 @@ body {
         background-color: var(--color-content);
     }
 
+    #post h2 {
+        margin-top: 24px;
+    }
+
     #index {
         position: fixed;
         right: 0;
