Changed illegal html

--- a/template/template.html
+++ b/template/template.html
@@ -13,9 +13,7 @@
 <div id="wrapper">
     <div id="content">
         <input type="checkbox" id="dropdown-menu" class="dropdown-checkbox">
-        <label for="dropdown-menu" class="dropdown-toggle">
-            <div id="menu-toggle"><span></span></div>
-        </label>
+        <label for="dropdown-menu" id="menu-toggle"><span></span></label>
         <div id="index" class="dropdown-menu">
             <ul>$index$</ul>
             <a href="rss.xml" title="RSS">
