--- a/template/template.html
+++ b/template/template.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1">
+    <meta name="description" content="The Koi Farm 2 development blog">
     <title>Koi Farm 2 blog | $title$</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_16.png"/>
