--- a/template/template.html
+++ b/template/template.html
@@ -36,7 +36,7 @@
         </div>
         <div id="blog">
             <div id="post">$post$</div>
-            <div id="footer">$previous$$next$</div>
+            <div id="footer">$previous$<span id="copyright">© Job Talle 2023 - $year$</span>$next$</div>
         </div>
     </div>
 </div>
