--- a/style.css
+++ b/style.css
@@ -107,12 +107,20 @@ body {
 }
 
 #footer {
+    margin-bottom: 24px;
     padding: var(--body-margin);
-    margin-bottom: 32px;
+    display: flex;
+    justify-content: space-between;
 }
 
 #footer .next {
     float: right;
+}
+
+#copyright {
+    font-size: 10pt;
+    font-weight: normal;
+    color: rgba(0, 0, 0, 0.47);
 }
 
 .dropdown-checkbox {
