--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ body {
     padding: 12px;
     display: inline-block;
     border: 1px solid var(--color-dark);
+    width: 100%;
 }
 
 #post h2 {
