--- a/template/template_rss.xml
+++ b/template/template_rss.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<rss version="2.0">
+<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
     <channel>
         <title>Koi Farm 2 devlog</title>
         <link>https://devlog.koifarmgame.com/</link>
         <description>The Koi Farm 2 devlog</description>
+        <atom:link href="https://devlog.koifarmgame.com/rss.xml" rel="self" type="application/rss+xml"/>
         $items$
     </channel>
 </rss>
