--- a/template/template_rss_item.xml
+++ b/template/template_rss_item.xml
@@ -2,4 +2,5 @@
     <title>$title</title>
     <link>$link$</link>
     <description>$description$</description>
+    <guid isPermaLink="true">$link$</guid>
 </item>
