--- a/template/template.html
+++ b/template/template.html
@@ -18,7 +18,7 @@
         <div id="index" class="dropdown-menu">
             <ul>$index$</ul>
             <a href="rss.xml" title="RSS">
-                <svg height="16px" width="16px" class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.912 24.912">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24.912 24.912">
                     <g>
                         <path d="M3.692,17.517C1.656,17.517,0,19.173,0,21.211C0,23.244,1.656,24.9,3.692,24.9s3.694-1.657,3.694-3.689C7.387,19.173,5.729,17.517,3.692,17.517z"/>
                         <path d="M0.384,8.142C0.173,8.142,0,8.315,0,8.527v4.688c0,0.211,0.173,0.383,0.384,0.383c6.02,0,10.919,4.898,10.919,10.92c0,0.209,0.171,0.383,0.384,0.383h4.689h0.016c0.215,0,0.387-0.173,0.387-0.383l-0.018-0.121C16.692,15.423,9.37,8.142,0.384,8.142z"/>
@@ -27,11 +27,16 @@
                 </svg>
             </a>
             <a href="https://x.com/jobtalle" target="_blank" title="X">
-            <svg height="16px" width="16px" class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24" xml:space="preserve">
+            <svg class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                 <g>
                     <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
                 </g>
             </svg>
+            </a>
+            <a href="https://discord.gg/bw3ZFe63Qg" target="_blank" title="Discord">
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 126.644 96">
+                    <path d="M81.15,0c-1.2376,2.1973-2.3489,4.4704-3.3591,6.794-9.5975-1.4396-19.3718-1.4396-28.9945,0-.985-2.3236-2.1216-4.5967-3.3591-6.794-9.0166,1.5407-17.8059,4.2431-26.1405,8.0568C2.779,32.5304-1.6914,56.3725.5312,79.8863c9.6732,7.1476,20.5083,12.603,32.0505,16.0884,2.6014-3.4854,4.8998-7.1981,6.8698-11.0623-3.738-1.3891-7.3497-3.1318-10.8098-5.1523.9092-.6567,1.7932-1.3386,2.6519-1.9953,20.281,9.547,43.7696,9.547,64.0758,0,.8587.7072,1.7427,1.3891,2.6519,1.9953-3.4601,2.0457-7.0718,3.7632-10.835,5.1776,1.97,3.8642,4.2683,7.5769,6.8698,11.0623,11.5419-3.4854,22.3769-8.9156,32.0509-16.0631,2.626-27.2771-4.496-50.9172-18.817-71.8548C98.9811,4.2684,90.1918,1.5659,81.1752.0505l-.0252-.0505ZM42.2802,65.4144c-6.2383,0-11.4159-5.6575-11.4159-12.6535s4.9755-12.6788,11.3907-12.6788,11.5169,5.708,11.4159,12.6788c-.101,6.9708-5.026,12.6535-11.3907,12.6535ZM84.3576,65.4144c-6.2637,0-11.3907-5.6575-11.3907-12.6535s4.9755-12.6788,11.3907-12.6788,11.4917,5.708,11.3906,12.6788c-.101,6.9708-5.026,12.6535-11.3906,12.6535Z"/>
+                </svg>
             </a>
         </div>
         <div id="blog">
