--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ a:hover {
 body {
     background-color: var(--color-background);
     color: var(--color-dark);
-    font-family: sans-serif;
+    font-family: serif;
     margin: var(--body-margin);
     font-size: 12pt;
 }
@@ -58,7 +58,6 @@ body {
 #index {
     padding: 12px;
     white-space: nowrap;
-    font-style: italic;
 }
 
 #index ul {
@@ -87,12 +86,13 @@ body {
     margin: 0;
     text-align: center;
     width: 100%;
+    font-size: 20pt;
 }
 
 #post h3 {
     text-align: center;
     width: 100%;
-    font-size: 8pt;
+    font-size: 10pt;
     margin-top: 0;
     font-style: italic;
     font-weight: normal;
