Used critical css

--- a/template/template.html
+++ b/template/template.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1">
     <meta name="description" content="The Koi Farm 2 development blog">
     <title>Koi Farm 2 blog | $title$</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_16.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_32.png"/>
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="rss.xml">
+    <style>$style$</style>
 </head>
 <body>
 <div id="wrapper">
